--- a/snes.cfg
+++ b/snes.cfg
@@ -1,36 +1,69 @@
-# ca65 linker config for 256k sfc (thanks blargg)
+# ca65 linker config for 256 KiB (2 Mbit) sfc file
 
 # Physical areas of memory
-# Names need not match, but it makes it easier to remember if they do.
 MEMORY {
-    ZEROPAGE:   start =      0, size =  $100;
-    BSS:        start =   $200, size = $1800;
-    ROM:        start =  $8000, size = $8000, fill = yes, bank = 0;
-    BANK1:      start = $10000, size = $8000, fill = yes, bank = 1;
-    BANK2:      start = $18000, size = $8000, fill = yes, bank = 2;
-    BANK3:      start = $20000, size = $8000, fill = yes, bank = 3;
-    BANK4:      start = $28000, size = $8000, fill = yes, bank = 4;
-    BANK5:      start = $30000, size = $8000, fill = yes, bank = 5;
-    BANK6:      start = $38000, size = $8000, fill = yes, bank = 6;
-    BANK7:      start = $40000, size = $8000, fill = yes, bank = 7;
+  # I usually reserve $000000-$00000F for local variables
+  # allocated just below the .proc statement of a subroutine.
+  # The rest is open for global variables.
+  ZEROPAGE:   start =  $000010, size = $00F0;
+
+  # Make sure to change BSS based on where you put
+  # the stack and how big you expect it to get.
+  # Unlike on the NES, we include shadow OAM in BSS here
+  # because there's not as much of a benefit to having it
+  # page-aligned.
+  BSS:        start =  $000200, size = $1E00;
+  BSS7E:      start =  $7E2000, size = $E000;
+  BSS7F:      start =  $7F0000, size =$10000;
+
+  # The fast ROM area starts at $808000.
+  # It's mirrored into the slow ROM area.
+  ROM0:       start =  $808000, size = $8000, fill = yes;
+  ROM1:       start =  $818000, size = $8000, fill = yes;
+  ROM2:       start =  $828000, size = $8000, fill = yes;
+  ROM3:       start =  $838000, size = $8000, fill = yes;
+  ROM4:       start =  $848000, size = $8000, fill = yes;
+  ROM5:       start =  $858000, size = $8000, fill = yes;
+  ROM6:       start =  $868000, size = $8000, fill = yes;
+  ROM7:       start =  $878000, size = $8000, fill = yes;
+
+  # The sound processor has its own address space
+  # SPCZEROPAGE:start =    $0010, size = $00E0;
+  # SPCRAM:     start =    $0200, size = $FDC0;
 }
 
 # Logical areas code/data can be put into.
 SEGMENTS {
-    ZEROPAGE:   load = ZEROPAGE,    type = zp;
-    BSS:        load = BSS,         type = bss, align = $100;
+  # Read-only areas for main CPU
+  CODE:       load = ROM0, align = $100;
+  RODATA:     load = ROM0, align = $100;
+  SNESHEADER: load = ROM0, start = $80FFC0;
+  CODE1:      load = ROM1, align = $100, optional=yes;
+  RODATA1:    load = ROM1, align = $100, optional=yes;
+  CODE2:      load = ROM2, align = $100, optional=yes;
+  RODATA2:    load = ROM2, align = $100, optional=yes;
+  CODE3:      load = ROM3, align = $100, optional=yes;
+  RODATA3:    load = ROM3, align = $100, optional=yes;
+  CODE4:      load = ROM4, align = $100, optional=yes;
+  RODATA4:    load = ROM4, align = $100, optional=yes;
+  CODE5:      load = ROM5, align = $100, optional=yes;
+  RODATA5:    load = ROM5, align = $100, optional=yes;
+  CODE6:      load = ROM6, align = $100, optional=yes;
+  RODATA6:    load = ROM6, align = $100, optional=yes;
+  CODE7:      load = ROM7, align = $100, optional=yes;
+  RODATA7:    load = ROM7, align = $100, optional=yes;
 
-    CODE:       load = ROM,         align = $8000;
-    RODATA:     load = ROM;
-    SNESHEADER:     load = ROM,         start =  $FFC0;
-    VECTORS:     load = ROM,         start = $FFE0;
+  # Read-only areas for sound CPU
+  # SPCIMAGE:   load = ROM7, run=SPCRAM, align = $100, define=yes;
 
-    # The extra banks
-    BANK1:      load = BANK1,       align = $8000, optional = yes;
-    BANK2:      load = BANK2,       align = $8000, optional = yes;
-    BANK3:      load = BANK3,       align = $8000, optional = yes;
-    BANK4:      load = BANK4,       align = $8000, optional = yes;
-    BANK5:      load = BANK5,       align = $8000, optional = yes;
-    BANK6:      load = BANK6,       align = $8000, optional = yes;
-    BANK7:      load = BANK7,       align = $8000, optional = yes;
+  # Areas for variables for main CPU
+  ZEROPAGE:   load = ZEROPAGE, type = zp, define=yes;
+  BSS:        load = BSS, type = bss, align = $100, optional=yes;
+  BSS7E:      load = BSS7E, type = bss, align = $100, optional=yes;
+  BSS7F:      load = BSS7F, type = bss, align = $100, optional=yes;
+
+  # Areas for variables for sound CPU
+  # SPCZEROPAGE:load = SPCZEROPAGE, type=zp, optional=yes;
+  # SPCBSS:     load = SPCRAM, type = bss, align = $100, optional=yes;
+
 }
